--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="main-box">
+  <div class="container">
     <div class="top">
       <h1>Weather App</h1>
     </div>
 
     <div class="middle">
-      <label for="weather">Enter City: </label>
-      <input type="text" id="weather" class="js-input input" placeholder="Enter City">
+      <input type="text" class="js-input input" placeholder="Enter City">
       <button class="js-btn btn">Get Weather</button>
     </div>
 
     <div class="bottom">
 
-      <div class="js-result result"></div>
+      <div class="js-result result">
+      </div>
     </div>
-    
+
   </div>
   <script src="script.js"></script>
-  
+
 </body>
+
 </html>
